# lukuvinkkikirjasto

./: .coverage  .coveragerc  .gitignore  .pylintrc  Burndown.md  Procfile  README.md  app.py  db.py  dod ja muuta.odt  log.html  lukuvinkkikirjasto.db  main.db  output.xml  pyproject.toml  report.html  requirements.txt  routes.py  run_robot_tests.sh  schema.sql  tables.db  tasks.py  yleista  yleista.md
.github/workflows/: main.yml
src/: .env  .routes.py.swp  AppLibrary.py  app.py  db.py  dbconfig.py  link_repository.py  main.db  routes.py  schema.sql  user_repository.py
src/static/scripts/: createlink.js  home.js  link_generator.js  login.js  main.js
src/static/styles/: .index.css.swp  authorization.css  authorization.css.map  authorization.scss  home.css  home.css.map  home.scss  index.css  index.css.map  index.scss  lukuvinkki.css  lukuvinkki.css.map  lukuvinkki.scss
src/templates/: .index.html.swp  .index.swp  createLink.html  home.html  index.html  login.html  lukuvinkki.html  ohjeet.txt  register.html
src/tests/: authorization.robot  createlink.robot  login.robot  logout.robot  open.robot  register.robot  resource.robot  schema.sql  test.db  test_link_repository.py  test_schema.sql  test_user_repository.py
src/väliaikainen/: createlink.robot  login.robot  open.robot
src/väliaikainen säilö tuhmeliineille/: createlink.robot  login.robot
static/styles/: index.css
templates/: index.html
