[tool.poetry]
name = "lukuvinkkikirjasto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
Flask = "^2.0.2"
SQLAlchemy = "^1.4.27"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^6.2.5"
coverage = "^6.2"
pylint = "^2.12.1"
robotframework = "^4.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
